Completed preliminary landing page in index.html - added a landing page graphic and temporary website logo in icons.html - fixed nav.html to added light-dark mode toggle button - removed previous implementation of light-dark mode toggle (in nav.html and dark-mode.js) - abstracted footer content into footer.html - fixed css in custom-bootstrap.css

--- a/flaskr/static/custom-bootstrap.css
+++ b/flaskr/static/custom-bootstrap.css
@@ -5,24 +5,40 @@
   font-weight: 700;
 }
 
+.navbar .nav-item .nav-link {
+  transition: background-color 0.2s ease, transform 0.3s ease;
+}
+
 .navbar .nav-item .nav-link:hover {
   color: var(--secondary);
+  transform: scale(1.05);
 }
 
 /* Button styles */
-.btn-primary {
-  background-color: var(--primary); 
-  border-color: var(--primary); 
+.btn.btn-primary {
+  background-color: var(--primary) !important; 
+  border-color: transparent !important;
+  outline: none !important;
+  box-shadow: none !important;
+  transition: transform 0.3s ease;
 }
 
-.btn-primary:hover {
-  background-color: var(--secondary);
+.btn.btn-primary:hover {
+  transform: scale(1.05);
+}
+
+.btn.btn-primary:active,
+.btn.btn-primary:focus,
+.navbar .nav-item .nav-link:active,
+.navbar .nav-item .nav-link:focus {
+  transform: scale(1);
 }
 
 .btn.dark-mode-toggle {
-  border: none;
-  box-shadow: none;
   padding: 0.5rem 1rem;
+  border-color: transparent !important;
+  outline: none !important;
+  box-shadow: none !important;
 }
 
 .dark-mode-toggle:hover {
